public class AxeBevaior implements WeaponBevior {
    public void useWeapon(){
        System.out.println("I'm using AXE.");
    }
}
