public class FlyingAxe implements WeaponBevior {
    public void useWeapon(){
        System.out.println("I'm using flying Axe!");
    }
}
