public class SwordBehavior implements WeaponBevior {

    public void useWeapon(){
        System.out.println("I'm using SWORD.");
    }
}
