public interface WeaponBevior {

    public void useWeapon();
}
