@startuml

title __WEAPONVSCHARACTER's Class Diagram__\n

  package  {
    class AxeBevaior {
    }
  }
  

  package  {
    class BowAndArrowBehavior {
    }
  }
  

  package  {
    abstract class Character {
    }
  }
  

  package  {
    class FlyingAxe {
    }
  }
  

  package  {
    class King {
    }
  }
  

  package  {
    class KnifeBehavior {
    }
  }
  

  package  {
    class Knight {
    }
  }
  

  package  {
    class Program {
    }
  }
  

  package  {
    class Queen {
    }
  }
  

  package  {
    class SwordBehavior {
    }
  }
  

  package  {
    interface WeaponBevior {
    }
  }
  

  AxeBevaior -up-|> WeaponBevior
  BowAndArrowBehavior -up-|> WeaponBevior
  Character o-- WeaponBevior : weapon
  FlyingAxe -up-|> WeaponBevior
  King -up-|> Character
  KnifeBehavior -up-|> WeaponBevior
  Knight -up-|> Character
  Queen -up-|> Character
  SwordBehavior -up-|> WeaponBevior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
